--- a/debian/control
+++ b/debian/control
@@ -14,7 +14,7 @@ XS-Ruby-Versions: all
 Package: ruby-ffi-icu
 Architecture: all
 XB-Ruby-Versions: ${ruby:Versions}
-Depends: ${shlibs:Depends}, ${misc:Depends}, ruby | ruby-interpreter, ruby-ffi
-# ffi (>= 1.0.9, ~> 1.0), rspec (~> 2.5.0, development), rake (~> 0.9.2, development)
+Depends: ${shlibs:Depends}, ${misc:Depends}, ruby | ruby-interpreter, ruby-ffi, libicu48 | libicu52
+Conflicts: libicu34, libicu36, libicu38, libicu44
 Description: Simple Ruby FFI wrappers for things I need from ICU.
  Provides charset detection, locale sensitive collation and more. Depends on libicu.
