--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,18 @@
+language: ruby
+os: linux
+dist: xenial
+
 rvm:
   - 2.4
   - 2.5
   - 2.6
   - 2.7
   - ruby-head
+
 before_script:
   - sudo apt-get install -y libicu-dev
 
-matrix:
+jobs:
   allow_failures:
-    - rvm: ruby-head
     - rvm: 2.7
+    - rvm: ruby-head
