Update CI to include Ruby 2.7 (#41)
This also simplifies the prior Ruby versions to let Travis pull the latest release (more [here](https://docs.travis-ci.com/user/languages/ruby/#specifying-ruby-versions-and-implementations)), and updates docs to match.

Since 2.7 has some failures, we're allowing for failures on that build for now so we can coordinate the appropriate fixes in a followup.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,18 @@
+language: ruby
+os: linux
+dist: xenial
+
 rvm:
-  - 2.4.6
-  - 2.5.5
-  - 2.6.3
+  - 2.4
+  - 2.5
+  - 2.6
+  - 2.7
   - ruby-head
+
 before_script:
   - sudo apt-get install -y libicu-dev
 
-matrix:
+jobs:
   allow_failures:
+    - rvm: 2.7
     - rvm: ruby-head
