migrate to travis.com and update travis settings

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,16 @@
 language: ruby
 os: linux
-dist: xenial
+dist: focal
+
+arch:
+  - amd64
+  - arm64
 
 rvm:
-  - 2.5
   - 2.6
   - 2.7
+  - 3.0
   - ruby-head
 
 before_script:
   - sudo apt-get install -y libicu-dev
-
