--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,10 @@
-## MAC OS
+## macOS
 .DS_Store
 
-## TEXTMATE
-*.tmproj
-tmtags
-
-## EMACS
-*~
-\#*
-.\#*
-
-## VIM
-*.swp
-
-## PROJECT::GENERAL
+## Project specific
 coverage
 rdoc
 pkg
-
-## PROJECT::SPECIFIC
 *.rbc
 Gemfile.lock
+vendor/
